# SolarGrid-DZ

./: .env.example  .gitignore  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: tasks.py
backend/api/: main.py  models.py
backend/api/routes/: carbon.py  dispatch.py  forecasts.py  installations.py  maintenance.py
backend/data_pipeline/: __init__.py  influx_client.py  kafka_consumer.py  mqtt_listener.py
dashboard/: Dockerfile.dashboard  index.html  nginx.conf  package.json  postcss.config.js  tailwind.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: BatteryStatus.jsx  CO2Tracker.jsx  DispatchSchedule.jsx  DistrictMap.jsx  ForecastChart.jsx  MaintenancePanel.jsx  SystemStats.jsx
dashboard/src/services/: api.js
docker/: mosquitto.conf
ml/: __init__.py  demand_forecast.py  fault_detection.py  solar_forecast.py  train_all.py
notebooks/: solar_analysis.ipynb
optimizer/: __init__.py  dispatch_engine.py  mpc_controller.py
tests/: test_solargrid.py
